tests/should_fail/unsupported/1827/test4.stderr
error: Unsupported expression: Pattern matching literals on Int are unsupported by Pearlite. Consider using if-then-else instead.
 --> test4.rs:7:13
  |
7 |             Some((Some(0), _)) | Some((_, Some(0))) => 1,
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

